# GeneticNNCpp

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  FourierElement.h  FourierHypersurface.h  FourierSeries.h  IncorrectArgsException.h  Model.h  Neuron.h  NeuronLayer.h  Random.h
src/: Random.cpp
